# moczarr

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  environment.yml  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
docs/: concepts.md  development.md  index.md  quickstart.md
docs/api/: convention.md  coverage.md  dggs.md  exceptions.md  fabricate.md  join.md  moc_index.md  open.md  ranges.md  store.md
docs/examples/: quickstart.ipynb
src/moczarr/: __init__.py  convention.py  coverage.py  dggs.py  exceptions.py  fabricate.py  join.py  moc_index.py  open.py  ranges.py  store.py
tests/: conftest.py  test_concurrency.py  test_convention.py  test_coverage.py  test_dggs.py  test_fabricate.py  test_join.py  test_moc_index.py  test_open.py  test_path_grouping.py  test_ranges.py  test_store.py
tests/data/: serc_cell_ids_golden.npy
tests/data/serc_hive/: coverage.moc  morton_hive.json
tests/data/serc_hive/4/3/3/1/2/4/4/4331244.zarr/: zarr.json
tests/data/serc_hive/4/3/3/1/2/4/4/4331244.zarr/8/: zarr.json
tests/data/serc_hive/4/3/3/1/4/2/1/4331421.zarr/: zarr.json
tests/data/serc_hive/4/3/3/1/4/2/1/4331421.zarr/8/cell_ids/: zarr.json
tests/data/serc_hive/4/3/3/1/4/2/1/4331421.zarr/8/count/: zarr.json
tests/data/serc_hive/4/3/3/1/4/2/2/4331422.zarr/: coverage.moc  zarr.json
tests/data/serc_hive/4/3/3/1/4/2/4/4331424.zarr/: coverage.moc  zarr.json
tests/data/serc_hive/4/3/3/2/1/3/3/4332133.zarr/: coverage.moc  zarr.json
tests/data/serc_hive/4/3/3/2/1/3/3/4332133.zarr/8/: zarr.json
tests/data/serc_hive/4/3/3/2/3/1/1/4332311.zarr/: zarr.json
tests/data/serc_hive_pg3/: coverage.moc  morton_hive.json
tests/data/serc_hive_pg3/-4/334/122/14/-433412214.zarr/: zarr.json
tests/data/serc_hive_pg3/-4/334/122/14/-433412214.zarr/10/morton/: zarr.json
tests/data/serc_hive_pg3/-4/334/122/14/-433412214.zarr/10/morton/c/: 0
tests/data/serc_hive_pg3/4/331/422/41/433142241.zarr/: zarr.json
tests/data/serc_hive_pg3/4/331/422/41/433142241.zarr/10/count/: zarr.json
tests/data/serc_hive_pg3/4/331/422/41/433142241.zarr/10/morton/c/: 0
tests/data/serc_hive_pg3/4/331/422/42/433142242.zarr/: zarr.json
tests/data/serc_hive_pg3/4/331/422/42/433142242.zarr/10/: zarr.json
tests/data/serc_hive_pg3/4/331/422/42/433142242.zarr/10/count/c/: 0
tests/data/serc_hive_pg3/4/331/422/42/433142242.zarr/10/morton/c/: 0
tools/: bench_open.py  generate_pg3_fixture.py  generate_serc_fixture.py
(+40 files in other folders)
